# user-silo

./: .gitignore  Cargo.toml  README.md  build.rs
container/: Dockerfile  build_container_bundle
proto/: application_config.proto  stubs.proto  t_oak_user_silo.proto
src/: lib.rs  main.rs  oak_user_silo.rs  orchestrator_client.rs
